@@ -1,5 +1,9 @@
 2006-04-29  MenTaLguY  <mental@rydia.net>
 
+	* src/debug/simple-event.h: simplify the SimpleEvent API more
+
+2006-04-29  MenTaLguY  <mental@rydia.net>
+
 	* src/debug/simple-event.h: make Debug::SimpleEvent more convenient
 
 	* src/debug/event.h, src/debug/logger.cpp: add FINALIZERS category
